Stock in and out controllers

--- a/easyfmis/App.config
+++ b/easyfmis/App.config
@@ -6,6 +6,9 @@
         <add name="easyfmis.Properties.Settings.easyfmisConnectionString"
             connectionString="Data Source=localhost;Initial Catalog=easyfmis;Persist Security Info=True;User ID=sa"
             providerName="System.Data.SqlClient" />
+        <add name="easyfmis.Properties.Settings.easyfmisConnectionString1"
+            connectionString="Data Source=localhost;Initial Catalog=easyfmis;Persist Security Info=True;User ID=sa;Password=innosoft"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
