MstArticle (Item) CRUD

--- a/easyfmis/App.config
+++ b/easyfmis/App.config
@@ -7,7 +7,7 @@
             connectionString="Data Source=localhost;Initial Catalog=easyfmis;Persist Security Info=True;User ID=sa"
             providerName="System.Data.SqlClient" />
         <add name="easyfmis.Properties.Settings.easyfmisConnectionString1"
-            connectionString="Data Source=localhost;Initial Catalog=easyfmis;Persist Security Info=True;User ID=sa;Password=innosoft"
+            connectionString="Data Source=localhost;Initial Catalog=easyfmis;User ID=sa"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
