--- a/easyfmis/easyfmis.csproj
+++ b/easyfmis/easyfmis.csproj
@@ -352,6 +352,8 @@
     <Content Include="Resources\Images\Icons\System Tables.png" />
     <Content Include="Resources\Images\Icons\User.png" />
     <Content Include="Resources\Images\Icons\Utilities.png" />
+    <Content Include="Resources\Images\Logo\easyerp.ico" />
+    <Content Include="Resources\Images\Logo\easyerp.png" />
     <Content Include="Resources\Images\Logo\easypos cropped.ico" />
     <Content Include="Resources\Images\Logo\easypos cropped.jpg" />
     <Content Include="Resources\Images\Others\color theme.jpg" />
